add first run check to ensure schema and typeddict don't diverge
