# src/flask_ml/flask_ml_server/_generated_models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-10-16T05:10:23+00:00
+#   timestamp: 2024-10-17T02:20:29+00:00
 
 from __future__ import annotations
 
@@ -25,7 +25,7 @@ class SchemaAPIRoute(BaseModel):
     model_config = ConfigDict(
         populate_by_name=True,
     )
-    input_schema: Annotated[str, Field(examples=["/tasks/{name_of_task}/input_schema"])]
+    task_schema: Annotated[str, Field(examples=["/tasks/{name_of_task}/task_schema"])]
     run_task: Annotated[str, Field(examples=["/tasks/{name_of_task}"])]
     payload_schema: Annotated[str, Field(examples=["/tasks/{name_of_task}/payload_schema"])]
     sample_payload: Annotated[Optional[str], Field(examples=["/tasks/{name_of_task}/sample_payload"])] = None
@@ -117,6 +117,7 @@ class EnumParameterDescriptor(BaseModel):
     )
     parameter_type: Annotated[Optional[ParameterType], Field(alias="parameterType")] = ParameterType.ENUM
     enum_vals: Annotated[List[EnumVal], Field(alias="enumVals")]
+    message_when_empty: Annotated[Optional[str], Field(alias="messageWhenEmpty")] = None
     default: str
 
 
@@ -298,12 +299,7 @@ class ResponseBody(
         populate_by_name=True,
     )
     root: Union[
-        FileResponse,
-        DirectoryResponse,
-        MarkdownResponse,
-        TextResponse,
-        BatchFileResponse,
-        BatchTextResponse,
+        FileResponse, DirectoryResponse, MarkdownResponse, TextResponse, BatchFileResponse, BatchTextResponse
     ]
 
 
